--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <h1>Hilal Alkan</h1>
   <h2>Hakkımda</h2>
- <!--Burada ayrı ayrı paragraflar koyma nedenim sayfa sınırını aşmak istememek, tablo kullanım konusuna henuz gelmediğim için böyle bir çözüm ürettim -->
+ <!--Burada ayrı ayrı paragraf koyma nedenim sayfa sınırını aşmak istememek, tablo kullanım konusuna henuz gelmediğim için böyle bir çözüm ürettim -->
 
   <p>
     Merhaba ben Hilal, İstanbulda yaşıyorum. Şuanda e-ticaret yöneticiliği yapıyorum ve 23 yaşındayım. 
