--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
   <h1>Hilal Alkan</h1>
   <h2>Hakkımda</h2>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit enim nostrum voluptas quis quae ratione! Iste, culpa. Quasi soluta perferendis excepturi itaque repellendus labore fugit corrupti deleniti quas, suscipit sequi.
+  Tempora reiciendis illum delectus magnam, at accusantium architecto voluptatum fugit incidunt rem eos vel vitae dolor. Ullam enim dicta alias voluptatum quidem veritatis libero dolorem culpa? Fugit numquam quibusdam sed.
  <!--Burada ayrı ayrı paragraf koyma nedenim sayfa sınırını aşmak istememek, tablo kullanım konusuna henuz gelmediğim için böyle bir çözüm ürettim -->
 
   <p>
