--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <h1>Hilal Alkan</h1>
   <h2>Hakkımda</h2>
 
+    <!-- sit amet -->
+
  <!--Burada ayrı ayrı paragraf koyma nedenim sayfa sınırını aşmak istememek, tablo kullanım konusuna henuz gelmediğim için böyle bir çözüm ürettim -->
 
   <p>
