new branch send merge request

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   <h2>Hakkımda</h2>
 
     <!-- sit amet -->
+    şimdi benim branchim main olduğu için bu şekilde merge etmeden kod direkt yansır ama varsaylım main branchde değilim o zaman ne yapmam lazım ?
+    şimdi yeni bir branch oluşturdum
+        - git checkout -b branchName => gidip kontrol ediyor böyle bir branch var mı diye. -b parametresi var mı diye bakar.
+            -  var olan bir branche geçmek için git branch branchName demen yeterli
 
  <!--Burada ayrı ayrı paragraf koyma nedenim sayfa sınırını aşmak istememek, tablo kullanım konusuna henuz gelmediğim için böyle bir çözüm ürettim -->
 
