--- a/index.html
+++ b/index.html
@@ -27,7 +27,22 @@
         - git checkout -b branchName => gidip kontrol ediyor böyle bir branch var mı diye. -b parametresi var mı diye bakar.
             -  var olan bir branche geçmek için git branch branchName demen yeterli
 
- <!--Burada ayrı ayrı paragraf koyma nedenim sayfa sınırını aşmak istememek, tablo kullanım konusuna henuz gelmediğim için böyle bir çözüm ürettim -->
+
+            bak gönderdiğim kodlar gelmedi
+            gelmesi için main branchine merge etmen yani birleştirmen lazım. sen şu anda main branchini görüntülüyorsun çünkü
+            bak burada var yani yeni oluşturudğumz branchte
+            şimdi buradaki mantık şu
+            yazılım ekibi düşün 3 kişi aynı anda çalışıyor herkes projenin bir kopyasını alıyor yani branch oluşturuyor
+            ilgili yerlerde güncellemeleri yapıyorlar ardından gönderiliyorlar bunların hepsi en son tek bir yerde yani main de toplanıyor. merge ediliyor
+            eğer aynı sayfada 2 farklı kişi çalışırsa yani aynı kodu düzeltip bunları merge request yollarsalar conflict çıkar. yani kodlar çakışır.
+            şimdi dev_hila_new_Branch 'i nasıl main'e alabileceğini göstericem.
+            
+            compoare pull request dedim
+
+            bak main kısmınada yazdığın kodlar geldi
+
+            şimdi varsayalım ben bu son yazdığım şeyleri de göndericem ardından silicem hepsini ve silinen yani eski versiyon kodları nasıl görüntülersin onu göstereyim
+            <!--Burada ayrı ayrı paragraf koyma nedenim sayfa sınırını aşmak istememek, tablo kullanım konusuna henuz gelmediğim için böyle bir çözüm ürettim -->
 
   <p>
     Merhaba ben Hilal, İstanbulda yaşıyorum. Şuanda e-ticaret yöneticiliği yapıyorum ve 23 yaşındayım. 
